* Editting the name and date on the flow cell edit window now saves the changes.
* When a request is split in the billing window, a refresh would sometimes reposition on the wrong part of the split.  This has been fixed.

5.3.6 Deploy Notes
--------------------
* In Billing Item rename TotalPrice to InvoicePrice
* In Billing Item new column splitType should be initialized to "%" if null on deploy.
* New db objects for HSC cores: Chromatogram, CoreFacility, InstrumentRun, Plate, PlateWell
* Added idCoreFacility to Analysis, BillingItem, Request, RequestCategory, WorkItem

5.3.5.1(12/21/2011)
--------------------
* Added text box to the user detail view that allows for entry of UCSC URL.
* When user selects organism when registering an experiment the organism selection will now propagate to the hyb setup tab.
* Tool tips will now display when the user mouses over the Sample Annotations.  Tool tips will display the description associated with the sample annotation.
* Added two check boxes to the Sample Annotation configuration screen that details whether the annotation is for Sample or for Data Track.
* Fixed bug that would cause an overwrite of a current experiment code application by the last saved experiment's code application.  Occurred in ExperimentEditView.
* Added new fields to the Organisms Window (binomial name, sort order, ncbi tax id, build date, das2name)

5.3.5
--------------------
* Added call to setDirty when annotation owner changed
* Changed Annotation security so lab managers can update if no owner
* Converted PendingWorkAuthd query to HQL
* When user self-registers, default user to isActive='Y'

5.3.4.2 (12/14/2011)
--------------------
* Removed 'Downloads' link, fixed files refresh when selecting a new experiment, reset tab index to 0 when switching to a new experiment or from 'edit' to 'view' or vice-versa.
* Added check to insure that "description" cannot be used as the name for an annotation
* Added "Copy Column" feature to sample view