@@ -406,7 +406,7 @@
 							" qualifiedFilePath='" + dragItem.@qualifiedFilePath + "'" +
 							" baseFilePath='" + dragItem.@baseFilePath + "'" +
 							" idAnalysisFileString='" + dragItem.@idAnalysisFileString + "'" +
-							" idAnalysis='" + idAnalysis.toString() + "' />");
+							" idAnalysis='" + idAnalysis.toString() + "'/>");
 						
 						for each ( var child:Object in dragItem.children() ) {
 							fileNode.appendChild(child);	
